add block ip, check block ip address and add doc
